cracion de registro de perfil, desarchivo, tipodelito

--- a/src/app/core/layout/footer/footer.component.html
+++ b/src/app/core/layout/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="footer pt-2 pb-1">
-    <span class="font-medium ml-2">Copyright © {{ anio }} - Derechos reservados - <b><a blan href="https://www.linkedin.com/in/alvaro-ortega-393a6a298/" target="_blank" class="text-white">Alvaro Ortega</a></b></span>
+    <span class="font-medium ml-2">Copyright © {{ anio }} - Derechos reservados - <b><a blan href="https://www.linkedin.com/in/alvaro-ortega-393a6a298/" target="_blank" class="text-white">Fiscalia Departamental de Potosi
+    </a></b></span>
 </div>
