--- a/src/app/modules/usuarioperfil/components/table/table.component.html
+++ b/src/app/modules/usuarioperfil/components/table/table.component.html
@@ -31,8 +31,8 @@
     
     <ng-template pTemplate="header">
         <tr>
-            <th pSortableColumn="descripcion">Usuario <p-sortIcon field="usuario"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">Descripción <p-sortIcon field="descripcion"></p-sortIcon></th>
+            <th pSortableColumn="idUsuario.usuario">Usuario <p-sortIcon field="idUsuario.usuario"></p-sortIcon></th>
+            <th pSortableColumn="idPerfil.descripcion">Descripción <p-sortIcon field="idPerfil.descripcion"></p-sortIcon></th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-usuarioperfil>
