--- a/src/app/modules/registroobjecion/registroobjecion.component.html
+++ b/src/app/modules/registroobjecion/registroobjecion.component.html
@@ -2,21 +2,24 @@
     <p-fieldset styleClass="sombra-black">
         <ng-template pTemplate="header">
             <div class="flex align-items-center text-primary fadeinleft animation-duration-400">
-                <h2 class="text-white">Unidad <span class="text-sm"> Rechazo</span> </h2>
+                <h2 class="text-white">Unidad<span class="text-sm">  Regitro de objeciones</span> </h2>
             </div>
         </ng-template>
             <div class="grid">
                 <div class="col-12 fadeindown animation-duration-400">
                     <div class="sombra-black border-round-xl p-2 surface-0">
                         <app-toolbar-common 
-                            [serviceGeneric]="rechzoService" [object]="rechzo()"/> 
+                            [serviceGeneric]="registroobjecionService" [object]="registroobjecion()"/> 
                         <app-modal-form></app-modal-form>
                         <app-table (rowSelected)="setObject($event)" ></app-table>
-                        <app-modal-delete [serviceGeneric]="rechzoService" [object]="rechzo().id"></app-modal-delete>
+                        <app-modal-delete [serviceGeneric]="registroobjecionService" [object]="registroobjecion().id"></app-modal-delete>
                     </div>
                 </div>
             </div>
     </p-fieldset>
 </div>
-<p-toast></p-toast>
+<p-toast></p-toast> 
+
+
+
 
