--- a/src/app/modules/usuarioperfil/components/modal-form/modal-form.component.html
+++ b/src/app/modules/usuarioperfil/components/modal-form/modal-form.component.html
@@ -5,22 +5,39 @@
             <p-dialog [(visible)]="openModal" [style]="{width: '50vw'}" header={{tittleForm}} [modal]="true" class="p-fluid">
                 <ng-template pTemplate="content">
                     
-                    <p class="text-center mb-6"><p-badge [value]="'Los campos marcados con * son obligatorios'"></p-badge></p>
-                    <div class="form-group field mt-6">
+                    <p class="text-center mb-6"><p-badge [value]="'Seleccione Usuario-Perfil'"></p-badge></p>
+                    <div class="form-group field my-6">
                         <span class="p-float-label">
-                            <input type="text" pInputText id="descripcion" [(ngModel)]="userprofile.idUsuario" formControlName="descripcion" class="p-inputtext-sm capitalize mt-1" />
-                            <label htmlFor="descripcion" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Usuario</label>
+                            <p-dropdown [options]="users()" 
+                                formControlName="idUsuario" 
+                                placeholder="Seleccione un Usuario" 
+                                optionLabel="usuario" 
+                                [(ngModel)]="userprofile.idUsuario"
+                                [filter]="true" 
+                                filterBy="usuario"
+                                filterPlaceholder="Buscar usuario"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i> Usuario</label>
                         </span>
-                        <small class="p-error block mt-2" *ngIf="formUserprofile.controls['descripcion'].touched && formUserprofile.get('descripcion')?.hasError('required')" >El campo Descripción es obligatorio</small>
+                        <small class="p-error block mt-2" *ngIf="formUserprofile.controls['idUsuario'].touched && formUserprofile.get('idUsuario')?.hasError('required')" >El campo usuario es obligatorio</small>
                     </div>
-                    <div class="form-group field mt-6">
+                    <div class="form-group field my-6">
                         <span class="p-float-label">
-                            <input type="text" pInputText id="descripcion" [(ngModel)]="userprofile.idPerfil" formControlName="descripcion" class="p-inputtext-sm capitalize mt-1" />
-                            <label htmlFor="descripcion" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Descripción</label>
+                            <p-dropdown [options]="profiles()" 
+                                formControlName="idPerfil" 
+                                placeholder="Seleccione Perfil" 
+                                optionLabel="descripcion"
+                                [(ngModel)]="userprofile.idPerfil"
+                                [filter]="true" 
+                                filterBy="descripcion"
+                                filterPlaceholder="Buscar Perfil"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i>Perfil</label>
                         </span>
-                        <small class="p-error block mt-2" *ngIf="formUserprofile.controls['descripcion'].touched && formUserprofile.get('descripcion')?.hasError('required')" >El campo Descripción es obligatorio</small>
+                        <small class="p-error block mt-2" *ngIf="formUserprofile.controls['idPerfil'].touched && formUserprofile.get('idPerfil')?.hasError('required')" >El campo usuario es obligatorio</small>
                     </div>
-
                 </ng-template>
                 <ng-template pTemplate="footer">
                     <input type="hidden" pInputText id="id" [(ngModel)]="userprofile.id" formControlName="id"/>
