--- a/src/app/modules/instructivo/components/modal-form/modal-form.component.html
+++ b/src/app/modules/instructivo/components/modal-form/modal-form.component.html
@@ -9,8 +9,8 @@
                     
                     <div class="form-group field mt-6" style="display: grid; grid-template-columns: auto auto;">
                         <label class="text-lg font-bold text-800"><span class="text-red-500">*</span> Fiscalia General</label>
-                        <p-triStateCheckbox formControlName="fiscaliaGeneral" inputId="checked"></p-triStateCheckbox>
-                        <label class="p-tristatecheckbox-label" for="checked">{{ formInstructivo.value.fiscaliGeneral === null ? 'null' : formInstructivo.value.fiscaliGeneral }}</label>
+                        <p-triStateCheckbox formControlName="fiscaliaGeneral" Id="checked"></p-triStateCheckbox>
+                        <label class="p-tristatecheckbox-label" for="checked">{{ formInstructivo.value.fiscaliaGeneral === null ? 'nulo' : formInstructivo.value.fiscaliaGeneral }}</label>
                     </div>
                     <div class="form-group field mt-6">
                         <span class="p-float-label">
@@ -35,6 +35,12 @@
                             <label htmlFor="fechaInstructivo" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Fecha</label>
                         </span>
                         <small class="p-error block mt-2" *ngIf="formInstructivo.controls['fechaInstructivo'].touched && formInstructivo.get('fechaInstructivo')?.hasError('required')" >El campo Fecha es obligatorio</small>
+                    </div>
+                    
+                    <div class="form-group field mt-6">
+                        <p-fileUpload name="pdfFile" chooseLabel="Subir archivo" [showUploadButton]="false" [showCancelButton]="false" (onSelect)="onUpload($event)" [multiple]="false" accept="" [maxFileSize]="1000000">
+                            
+                        </p-fileUpload>
                     </div>
   
 
