--- a/src/app/modules/desarchivo/components/modal-form/modal-form.component.html
+++ b/src/app/modules/desarchivo/components/modal-form/modal-form.component.html
@@ -1,1 +1,75 @@
-<p>modal-form works!</p>
+<form [formGroup]="formDesarchivo">
+
+    <div class="grid">
+        <div class="col-12">
+            <p-dialog [(visible)]="openModal" [style]="{width: '50vw'}" header={{tittleForm}} [modal]="true" class="p-fluid">
+
+                <ng-template pTemplate="content">
+                    
+                    <p class="text-center mb-6"><p-badge [value]="'Los campos marcados con * son obligatorios'"></p-badge></p>
+               
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <p-dropdown [options]="delitos()" 
+                                formControlName="idDelito" 
+                                placeholder="Seleccione un delito"
+                                optionLabel="descripcion"
+                                [(ngModel)]="desarchivo.idDelito"
+                                [filter]="true" 
+                                filterBy="descripcion"
+                                filterPlaceholder="Buscar delitos"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i> delito</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['idDelito'].touched && formDesarchivo.get('idDelito')?.hasError('required')" >El campo Persona es obligatorio</small>
+                    </div>
+                    
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <p-dropdown [options]="funcionarios()" 
+                                formControlName="idFuncionario" 
+                                placeholder="Seleccione un funcionario"
+                                optionLabel="nombre" 
+                                [(ngModel)]="desarchivo.idFuncionario"
+                                [filter]="true" 
+                                filterBy="nombre"
+                                filterPlaceholder="Buscar funcionarios"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i> funcionario</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['idFuncionario'].touched && formDesarchivo.get('idFuncionario')?.hasError('required')" >El campo Cargo es obligatorio</small>
+                    </div>
+                    
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <input type="text" pInputText id="descripcion" [(ngModel)]="desarchivo.id" formControlName="descripcion" class="p-inputtext-sm capitalize mt-1" />
+                            <label htmlFor="descripcion" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Cud</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['id'].touched && formDesarchivo.get('id')?.hasError('required')" >El campo Descripción es obligatorio</small>
+                    </div>
+
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <input type="text" pInputText id="descripcion" [(ngModel)]="desarchivo.id" formControlName="descripcion" class="p-inputtext-sm capitalize mt-1" />
+                            <label htmlFor="descripcion" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Motivo</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['id'].touched && formDesarchivo.get('id')?.hasError('required')" >El campo Descripción es obligatorio</small>
+                    </div>
+
+                   
+                    
+                </ng-template>
+                <ng-template pTemplate="footer">
+                    <input type="hidden" pInputText id="id" [(ngModel)]="desarchivo.id" formControlName="id"/>
+                    <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-secondary p-button-rounded mr-2 p-button-sm sombra-black" (click)="hideModal()"></button>
+                    <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-rounded mr-2 sombra-black p-button-sm" (click)="saveDesarchivo()"
+                        [loading]="isLoading"
+                        [disabled]="formDesarchivo.invalid">
+                    </button>
+                </ng-template>
+            </p-dialog>
+        </div>
+    </div>
+</form>
