arreglo de desarchivo

--- a/src/app/modules/tipodelito/components/table/table.component.html
+++ b/src/app/modules/tipodelito/components/table/table.component.html
@@ -21,7 +21,7 @@
     <ng-template pTemplate="caption">
         <div class="flex">
             
-            <h3 >Listado de tipo Delitos</h3>
+            <h3 >Listado de Tipos de Delito</h3>
             <span class="p-input-icon-left ml-auto">
                 <i class="pi pi-search"></i>
                 <input pInputText type="text" (input)="onGlobalFilter(dt1, $event)" placeholder="Buscar en la tabla" />
