--- a/src/app/modules/desarchivo/components/modal-form/modal-form.component.html
+++ b/src/app/modules/desarchivo/components/modal-form/modal-form.component.html
@@ -1,1 +1,77 @@
-<p>modal-form works!</p>
+<form [formGroup]="formDesarchivo">
+
+    <div class="grid">
+        <div class="col-12">
+            <p-dialog [(visible)]="openModal" [style]="{width: '50vw'}" header={{tittleForm}} [modal]="true" class="p-fluid">
+                <ng-template pTemplate="content">
+                    
+                    <p class="text-center mb-6"><p-badge [value]="'Registro Desarchivo'"></p-badge></p>
+                    <div class="form-group field my-6">
+                        <span class="p-float-label">
+                            <p-dropdown [options]="delitos()" 
+                                formControlName="idDelito" 
+                                placeholder="Seleccione un delito" 
+                                optionLabel="descripcion"
+                                [(ngModel)]="desarchivo.idDelito"
+                                [filter]="true" 
+                                filterBy="descripcion"
+                                filterPlaceholder="Buscar un Delito"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i> Delitos</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['idDelito'].touched && formDesarchivo.get('idDelio')?.hasError('required')" >El campo usuario es obligatorio</small>
+                    </div>
+                    <div class="form-group field my-6">
+                        <span class="p-float-label">
+                            <p-dropdown [options]="funcionarios()" 
+                                formControlName="idFuncionario" 
+                                placeholder="Seleccione funconario" 
+                                optionLabel="idFuncionario" 
+                                [(ngModel)]="desarchivo.idFuncionario"
+                                [filter]="true" 
+                                filterBy="idFuncionario"
+                                filterPlaceholder="Buscar Funcionario"
+                                emptyFilterMessage="No existen coincidencias"
+                                [showClear]="true"></p-dropdown>
+                            <label for="float-label" class="text-lg font-bold text-800"><i class="text-red-500">*</i>Funcionario</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['idFuncionario'].touched && formDesarchivo.get('idFuncionario')?.hasError('required')" >El campo usuairo es obligatorio</small>
+                    </div>
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <input type="motivo" pInputText id="motivo" [(ngModel)]="desarchivo.motivo" formControlName="motivo" class="p-inputtext-sm capitalize mt-1" />
+                            <label htmlFor="numeroResolucion" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Motivo</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['motivo'].touched && formDesarchivo.get('motivo')?.hasError('required')" >El campo Número de resolución es obligatorio</small>
+                    </div>
+                   
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <input type="number" pInputText id="cud" [(ngModel)]="desarchivo.cud" formControlName="cud" class="p-inputtext-sm mt-1" />
+                            <label htmlFor="cud" class="text-lg font-bold text-800"><span class="text-red-500">*</span> CUD</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['cud'].touched && formDesarchivo.get('cud')?.hasError('required')" >El campo CUD es obligatorio</small>
+                    </div>
+
+                    <div class="form-group field mt-6">
+                        <span class="p-float-label">
+                            <p-calendar id = "fechaDesarchivo" formControlName="fechaDesarchivo"></p-calendar>
+                            <label htmlFor="fechaDesarchivo" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Fecha</label>
+                        </span>
+                        <small class="p-error block mt-2" *ngIf="formDesarchivo.controls['fechaDesarchivo'].touched && formDesarchivo.get('fechaDesarchivo')?.hasError('required')" >El campo Fecha es obligatorio</small>
+                    </div>
+
+                </ng-template>
+                <ng-template pTemplate="footer">
+                    <input type="hidden" pInputText id="id" [(ngModel)]="desarchivo.id" formControlName="id"/>
+                    <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-secondary p-button-rounded mr-2 p-button-sm sombra-black" (click)="hideModal()"></button>
+                    <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-rounded mr-2 sombra-black p-button-sm" (click)="saveDesarchivo()"
+                        [loading]="isLoading"
+                        [disabled]="formDesarchivo.invalid">
+                    </button>
+                </ng-template>
+            </p-dialog>
+        </div>
+    </div>
+</form>
