--- a/src/app/modules/desarchivo/components/table/table.component.html
+++ b/src/app/modules/desarchivo/components/table/table.component.html
@@ -21,7 +21,7 @@
     <ng-template pTemplate="caption">
         <div class="flex">
             
-            <h3 >Listado de desarchivos</h3>
+            <h3 >Listado de Desarchivos</h3>
             <span class="p-input-icon-left ml-auto">
                 <i class="pi pi-search"></i>
                 <input pInputText type="text" (input)="onGlobalFilter(dt1, $event)" placeholder="Buscar en la tabla" />
@@ -31,19 +31,21 @@
     
     <ng-template pTemplate="header">
         <tr>
-            <th pSortableColumn="descripcion">descripcion <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">cud <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">motivo <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">fecha_asignacion <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">decha_recepcion <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">fecha_desarchivo <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">Nombre <p-sortIcon field="descripcion"></p-sortIcon></th>
-            <th pSortableColumn="descripcion">descripcion<p-sortIcon field="descripcion"></p-sortIcon></th>
+            <th pSortableColumn="cud">Cud <p-sortIcon field="cud"></p-sortIcon></th>
+            <th pSortableColumn="motivo">Motivo <p-sortIcon field="motivo"></p-sortIcon></th>
+            <th pSortableColumn="idFuncionario">Funcionario <p-sortIcon field="idFuncionario"></p-sortIcon></th>
+            <th pSortableColumn="idDelio">Descripción <p-sortIcon field="idDelio"></p-sortIcon></th>
+            <th pSortableColumn="ci">Fecha<p-sortIcon field="ci"></p-sortIcon></th>
+
         </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-unidad>
-        <tr [pSelectableRow]="unidad">
-            <td>{{ unidad.descripcion }}</td>
+    <ng-template pTemplate="body" let-desarchivo>
+        <tr [pSelectableRow]="desarchivo">
+            <td>{{ desarchivo.cud }}</td>
+            <td>{{ desarchivo.motivo }}</td>
+            <td>{{ desarchivo.idFuncionario.idPersona.nombre }}</td>
+            <td>{{ desarchivo.idDelito.descripcion }}</td>
+            <td>{{ desarchivo.fechaDesarchivo }}</td>
         </tr>
     </ng-template>
 </p-table>
