--- a/src/app/modules/tipodelito/tipodelito.component.html
+++ b/src/app/modules/tipodelito/tipodelito.component.html
@@ -2,7 +2,7 @@
     <p-fieldset styleClass="sombra-black">
         <ng-template pTemplate="header">
             <div class="flex align-items-center text-primary fadeinleft animation-duration-400">
-                <h2 class="text-white">tipoDelito <span class="text-sm"> Gestión de tipoDelito</span> </h2>
+                <h2 class="text-white">Tipos de Delito <span class="text-sm"> Gestión de Tipos de Delito</span> </h2>
             </div>
         </ng-template>
             <div class="grid">
