--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,7 +1,7 @@
     <p-menubar [model]="items" styleClass="white-menubar" [style]="{ 'position': 'sticky', 'top': 0, 'z-index': 1000 }">
         <ng-template pTemplate="start">
             <a [routerLink]="['/']">
-                <img src="https://boliviaemprende.com/wp-content/uploads/2016/03/ende.png" height="40" class="mr-2" />
+                <img src="../assets/images/Logo.png" height="40" class="mr-2" />
             </a>            
         </ng-template>
         <ng-template pTemplate="end">
