--- a/src/app/modules/registroobjecion/components/table/table.component.html
+++ b/src/app/modules/registroobjecion/components/table/table.component.html
@@ -21,7 +21,7 @@
     <ng-template pTemplate="caption">
         <div class="flex">
             
-            <h3 >Listado de perfiles</h3>
+            <h3 >Listado de Registro de Objeción</h3>
             <span class="p-input-icon-left ml-auto">
                 <i class="pi pi-search"></i>
                 <input pInputText type="text" (input)="onGlobalFilter(dt1, $event)" placeholder="Buscar en la tabla" />
@@ -35,6 +35,9 @@
             <th pSortableColumn="idFuncionario">Funcionario <p-sortIcon field="idFuncionario"></p-sortIcon></th>
             <th pSortableColumn="numeroResolucion">Número de Resolucion<p-sortIcon field="numeroResolucion"></p-sortIcon></th>
             <th pSortableColumn="cud">CUD <p-sortIcon field="cud"></p-sortIcon></th>
+            <th pSortableColumn="fechaAsignacion">Fecha de Asignación<p-sortIcon field="fechaAsignacion"></p-sortIcon></th>
+            <th pSortableColumn="fechaRecepcion">Fecha de Recepción<p-sortIcon field="fechaRecepcion"></p-sortIcon></th>
+            <th pSortableColumn="fechaDevolucion">Fecha de Devolución<p-sortIcon field="fechaDevolucion"></p-sortIcon></th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-registroobjecion>
@@ -43,6 +46,9 @@
             <td>{{ registroobjecion.idFuncionario }}</td>
             <td>{{ registroobjecion.numeroResolucion }}</td>
             <td>{{ registroobjecion.cud }}</td>
+            <td>{{ registroobjecion.fechaAsignacion }}</td>
+            <td>{{ registroobjecion.fechaRecepcion }}</td>
+            <td>{{ registroobjecion.fechaDevolucion }}</td>
         </tr>
     </ng-template>
 </p-table>
