header y ajustes simples en tablas

--- a/src/app/modules/cargo/cargo.component.html
+++ b/src/app/modules/cargo/cargo.component.html
@@ -2,7 +2,7 @@
     <p-fieldset styleClass="sombra-black">
         <ng-template pTemplate="header">
             <div class="flex align-items-center text-primary fadeinleft animation-duration-400">
-                <h2 class="text-white">Cargo <span class="text-sm"> Gestión de cargos</span> </h2>
+                <h2 class="text-white">Cargos <span class="text-sm"> Gestión de cargos</span> </h2>
             </div>
         </ng-template>
             <div class="grid">
