--- a/src/app/modules/persona/components/table/table.component.html
+++ b/src/app/modules/persona/components/table/table.component.html
@@ -31,10 +31,10 @@
     
     <ng-template pTemplate="header">
         <tr>
-            <th pSortableColumn="nombre">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+            <th pSortableColumn="nombre">Nombres <p-sortIcon field="nombre"></p-sortIcon></th>
             <th pSortableColumn="apellidoPat">Apellido Paterno <p-sortIcon field="apellidoPat"></p-sortIcon></th>
             <th pSortableColumn="apellidoMat">Apellido Materno <p-sortIcon field="apellidoMat"></p-sortIcon></th>
-            <th pSortableColumn="ci">Ci <p-sortIcon field="ci"></p-sortIcon></th>
+            <th pSortableColumn="ci">Carnet de Identidad <p-sortIcon field="ci"></p-sortIcon></th>
             <th pSortableColumn="ci">Celular <p-sortIcon field="ci"></p-sortIcon></th>
         </tr>
     </ng-template>
