--- a/src/app/modules/usuario/components/table/table.component.html
+++ b/src/app/modules/usuario/components/table/table.component.html
@@ -33,14 +33,14 @@
         <tr>
             <th pSortableColumn="usuario">Usuario <p-sortIcon field="usuario"></p-sortIcon></th>
             <th pSortableColumn="idFuncionario">Nombre Funcionario <p-sortIcon field="idFuncionario"></p-sortIcon></th>
-            <th pSortableColumn="idFuncionario">Cargo <p-sortIcon field="idFuncionario"></p-sortIcon></th>
-            <th pSortableColumn="idFuncionario">Unidad<p-sortIcon field="idFuncionario"></p-sortIcon></th>
+            <!--<th pSortableColumn="idFuncionario">Cargo <p-sortIcon field="idFuncionario"></p-sortIcon></th>
+            <th pSortableColumn="idFuncionario">Unidad<p-sortIcon field="idFuncionario"></p-sortIcon></th>-->
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
         <tr [pSelectableRow]="user">
             <td>{{ user.usuario }}</td>
-            <td>{{ user.idFuncionario.idPersona.nombre }}</td>
+            <td>{{ user.funcionario.idPersona.nombre }}</td>
             <td>{{ user.idFuncionario.idCargo.descripcion }}</td>
             <td>{{ user.idFuncionario.idUnidad.descripcion }}</td>
         </tr>
