--- a/src/app/modules/persona/components/modal-form/modal-form.component.html
+++ b/src/app/modules/persona/components/modal-form/modal-form.component.html
@@ -35,9 +35,9 @@
                     <div class="form-group field mt-6">
                         <span class="p-float-label">
                             <input type="number" pInputText id="ci" [(ngModel)]="person.ci" formControlName="ci" class="p-inputtext-sm capitalize mt-1" />
-                            <label htmlFor="ci" class="text-lg font-bold text-800"><span class="text-red-500">*</span> CI</label>
+                            <label htmlFor="ci" class="text-lg font-bold text-800"><span class="text-red-500">*</span> Carnet de Identidad</label>
                         </span>
-                        <small class="p-error block mt-2" *ngIf="formPerson.controls['ci'].touched && formPerson.get('ci')?.hasError('required')" >El campo CI es obligatorio</small>
+                        <small class="p-error block mt-2" *ngIf="formPerson.controls['ci'].touched && formPerson.get('ci')?.hasError('required')" >El campo Carnet de Identidad es obligatorio</small>
                     </div>
 
                     <div class="form-group field mt-6">
