--- a/src/app/modules/persona/components/table/table.component.html
+++ b/src/app/modules/persona/components/table/table.component.html
@@ -14,7 +14,7 @@
     dataKey="id"
 
     [loading]="loading()"
-    [globalFilterFields]="['nombre', 'apelidoPat']"
+    [globalFilterFields]="['nombre', 'apellidoPat', 'apellidoMat', 'ci', 'celular']"
     (onRowSelect)="onRowSelect($event)"
     (onRowUnselect)="onRowUnselect()"
 >
