--- a/src/app/modules/usuario/components/modal-form/modal-form.component.html
+++ b/src/app/modules/usuario/components/modal-form/modal-form.component.html
@@ -28,10 +28,10 @@
                             <p-dropdown [options]="funcionarios()" 
                                 formControlName="idFuncionario"
                                 placeholder="Selecione un funcionario" 
-                                optionLabel="id"
+                                optionLabel="idPersona.nombre"
                                 [(ngModel)]="user.idFuncionario" 
                                 [filter]="true"
-                                filterBy="id"
+                                filterBy="idPersona.nombre"
                                 filterPlaceholder="Buscar funcionarios"
                                 emptyFilterMessage="No existen coincidencias"
                                 [showClear]="true"                                
