--- a/src/app/modules/perfil/components/table/table.component.html
+++ b/src/app/modules/perfil/components/table/table.component.html
@@ -14,7 +14,7 @@
     dataKey="id"
 
     [loading]="loading()"
-    [globalFilterFields]="['descripcion', 'item']"
+    [globalFilterFields]="['descripcion']"
     (onRowSelect)="onRowSelect($event)"
     (onRowUnselect)="onRowUnselect()"
 >
